--- a/twitfix.ini
+++ b/twitfix.ini
@@ -6,6 +6,8 @@ processes = 5
 
 socket = 0.0.0.0:9000
 buffer-size = 8192
+#socket = /var/run/twitfix.sock
+#chmod-socket = 660
 vacuum = true
 
 die-on-term = true
