feat: nginxコンテナと統合

--- a/twitfix_proxy.conf
+++ b/twitfix_proxy.conf
@@ -2,7 +2,11 @@ server {
     listen       80;
     server_name  localhost;
 
-    #access_log  /var/log/nginx/host.access.log  main;
+
+    # access log を json 形式で出力
+	access_log  /dev/stdout  json;
+	error_log   /dev/stderr  warn;
+
 
     location / {
         try_files $uri @twitfix;
@@ -10,7 +14,7 @@ server {
 
     location @twitfix {
         include uwsgi_params;
-        uwsgi_pass uwsgi://twitfix_main:9000;
+        uwsgi_pass uwsgi://127.0.0.1:9000;
     }
 
     #error_page  404              /404.html;
