--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
-version: "3"
-
 services:
-  proxy:
-    image: nginx:alpine
-    container_name: twitfix_proxy
-    volumes:
-      - "./twitfix_proxy.conf:/etc/nginx/conf.d/default.conf"
-    ports:
-      - 8088:80
-    depends_on:
-      - twitfix
+  # proxy:
+  #   image: nginx:alpine
+  #   container_name: twitfix_proxy
+  #   volumes:
+  #     - "./twitfix_proxy.conf:/etc/nginx/conf.d/default.conf"
+  #   ports:
+  #     - 8088:80
+  #   depends_on:
+  #     - twitfix
 
   twitfix:
     image: twitfix
     build: .
     container_name: twitfix_main
+    ports:
+      - 8080:80
     volumes:
       - "./twitfix.ini:/twitfix/twitfix.ini:ro"
       - "./config.json:/twitfix/config.json:ro"
+      - "./logs:/twitfix/logs"
     # depends_on:
     #   - db
 
